Fixed misalignment on Premium page Close #21

--- a/static_files/scss/jj-premium-storefront.scss
+++ b/static_files/scss/jj-premium-storefront.scss
@@ -3,7 +3,7 @@
 @import 'mixins';
 
 .storefront7 .grid_8 {
-    width: 367px;
+    width: 367px !important;
     float: right;
 }
 
